# akiraka-lota

./: .gitignore  Cargo.toml  linecounter.py
src/: main.rs
ui/: Cargo.toml
ui/assets/shaders/: position_color.wgsl  position_texture.wgsl
ui/src/: app.rs  assets.rs  lib.rs
ui/src/platform/: mod.rs
ui/src/platform/macos/: mod.rs
ui/src/renderer/: mod.rs
ui/src/util/: mod.rs
ui/src/wgpu/: cache.rs  mod.rs  texture.rs
ui/src/widget/: colored.rs  colored_block.rs  mod.rs
