[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
window-vibrancy = "0.4.2"
window-shadows = "0.2.2"
raw-window-handle = "0.5"
pollster = "0.3.0"
rust-embed = "6.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25.0"

[dependencies.winit]
features = ["rwh_05"]
